--- a/index.html
+++ b/index.html
@@ -24,23 +24,22 @@
         </div>
     </section>
 
-    <section class="categoria">
+   <section class="categoria">
         <h2>1 Temporada</h2>
         <div class="categoria-videos">
             <a href="https://www.youtube.com/watch?v=8k798hoq2AU">
-               <img src="https://img.youtube.com/vi/8k798hoq2AU/maxresdefault.jpg"/>
-            <a href="https://www.youtube.com/watch?v=fO2Qnb7B9eM">
-                <img src="https://img.youtube.com/vi/fO2Qnb7B9eM/maxresdefault.jpg"/>
-            <a href="https://www.youtube.com/watch?v=GG0vsErzZ9s">
-                <img src="https://img.youtube.com/vi/GG0vsErzZ9s/maxresdefault.jpg"/>
-            <a href="https://www.youtube.com/watch?v=ehOxiGO-m4M">
-                <img src="https://img.youtube.com/vi/ehOxiGO-m4M/maxresdefault.jpg"/>
-            <a href="https://www.youtube.com/watch?v=JzDq0SLCU74">
-                <img src="https://img.youtube.com/vi/JzDq0SLCU74/maxresdefault.jpg"/>
-        
+                <img src="https://img.youtube.com/vi/8k798hoq2AU/maxresdefault.jpg"/>
+             <a href="https://www.youtube.com/watch?v=kKUqf_6Mj0s">
+                 <img src="https://img.youtube.com/vi/v=kKUqf_6Mj0s/maxresdefault.jpg"/>
+             <a href="https://www.youtube.com/watch?v=GG0vsErzZ9s">
+                 <img src="https://img.youtube.com/vi/GG0vsErzZ9s/maxresdefault.jpg"/>
+             <a href="https://www.youtube.com/watch?v=ehOxiGO-m4M">
+                 <img src="https://img.youtube.com/vi/ehOxiGO-m4M/maxresdefault.jpg"/>
+             <a href="https://www.youtube.com/watch?v=JzDq0SLCU74">
+                 <img src="https://img.youtube.com/vi/JzDq0SLCU74/maxresdefault.jpg"/>
+            
         </div>
     </section>
-
 
 </body>
 </html>
