--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             <a href="https://www.youtube.com/watch?v=8k798hoq2AU">
                 <img src="https://img.youtube.com/vi/8k798hoq2AU/maxresdefault.jpg"/>
              <a href="https://www.youtube.com/watch?v=kKUqf_6Mj0s">
-                 <img src="https://img.youtube.com/vi/v=kKUqf_6Mj0s/maxresdefault.jpg"/>
-             <a href="https://www.youtube.com/watch?v=GG0vsErzZ9s">
-                 <img src="https://img.youtube.com/vi/GG0vsErzZ9s/maxresdefault.jpg"/>
+                 <img src="https://img.youtube.com/vi/kKUqf_6Mj0s/maxresdefault.jpg"/>
+             <a href="https://www.youtube.com/watch?v=pc6UTNFm2zc">
+                 <img src="https://img.youtube.com/vi/pc6UTNFm2zc/maxresdefault.jpg"/>
              <a href="https://www.youtube.com/watch?v=ehOxiGO-m4M">
                  <img src="https://img.youtube.com/vi/ehOxiGO-m4M/maxresdefault.jpg"/>
              <a href="https://www.youtube.com/watch?v=JzDq0SLCU74">
